SERVER-42617 Race in CloneDocumentsCatchesInsertErrors can causes it to return an unexpected error

When the batch insertion routine on the consumer thread fails,
ensure that we return the proper error instead of
ErrorCodes::ProducerConsumerQueueEndClosed.